--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,16 +5,15 @@ Changelog
 1.1.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Ignore comments in activity view.
+  Fixes a bug where the activity view crashed when comments were added.
+  [jone]
 
 
 1.1.1 (2014-09-24)
 ------------------
 
-- Ignore comments in activity view.
-  Fixes a bug where the activity view crashed when comments were added.
-  [jone]
-
+- Empty brown-bag release.
 
 1.1.0 (2014-09-04)
 ------------------
