--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,8 @@ Changelog
 1.1.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix width of too wide images.
+  [Kevin Bieri]
 
 
 1.1.3 (2014-11-18)
