disable diazo themeing for ajax responses.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,8 @@ Changelog
 1.1.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- disable diazo themeing for ajax responses.
+  [jone]
 
 
 1.1.4 (2015-03-25)
