Remove support for collections.
Reverting a27fa568

The new implementation will no longer be portal_catalog based, but has its own catalog.
That's why it can no longer work with collections, custom views need to be implemented.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,9 @@ Changelog
 1.1.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Remove support for collections.
+  Because the activity feed will no longer be catalog based.
+  [jone]
 
 
 1.1.5 (2015-05-18)
