--- a/ftw/activity/locales/ftw.activity.pot
+++ b/ftw/activity/locales/ftw.activity.pot
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2015-05-18 09:06+0000\n"
+"POT-Creation-Date: 2015-05-19 11:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -14,17 +14,18 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0\n"
 "Preferred-Encodings: utf-8 latin1\n"
 
+msgid "added"
+msgstr ""
+
 #. Default: "${portal_type} ${action} ${when} by ${actor}"
-#: ./ftw/activity/browser/templates/activity_macros.pt:31
+#: ./ftw/activity/browser/templates/activity_macros.pt:33
 msgid "byline_text"
 msgstr ""
 
-#: ./ftw/activity/browser/representations.py:90
-msgid "created"
+msgid "changed"
 msgstr ""
 
-#: ./ftw/activity/browser/representations.py:92
-msgid "modified"
+msgid "deleted"
 msgstr ""
 
 #: ./ftw/activity/browser/templates/activity_raw.pt:4
