--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,8 +2,14 @@ Changelog
 =========
 
 
-1.1.6 (unreleased)
+2.0.0 (unreleased)
 ------------------
+
+- Implement custom souper-based catalog for logging all activities separately.
+  This allows us to also track delete activities.
+  The rendering has changed completely: custom representations must be rewritten
+  to the new renderer adapter.
+  [jone]
 
 - Remove support for collections.
   Because the activity feed will no longer be catalog based.
