--- a/ftw/activity/locales/de/LC_MESSAGES/ftw.activity.po
+++ b/ftw/activity/locales/de/LC_MESSAGES/ftw.activity.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2015-05-19 11:21+0000\n"
+"POT-Creation-Date: 2015-07-16 09:46+0000\n"
 "PO-Revision-Date: 2015-05-19 13:24+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -15,18 +15,18 @@ msgstr ""
 "Preferred-Encodings: utf-8 latin1\n"
 
 msgid "added"
-msgstr "hinzugefügt"
+msgstr "Hinzugefügt"
 
-#. Default: "${portal_type} ${action} ${when} by ${actor}"
-#: ./ftw/activity/browser/templates/activity_macros.pt:33
+#. Default: "${action} ${when} by ${actor}"
+#: ./ftw/activity/browser/templates/activity_macros.pt:48
 msgid "byline_text"
-msgstr "${portal_type} ${when} ${action} durch ${actor}"
+msgstr " ${action} durch ${actor} ${when}"
 
 msgid "changed"
-msgstr "verändert"
+msgstr "Verändert"
 
 msgid "deleted"
-msgstr "gelöscht"
+msgstr "Gelöscht"
 
 #: ./ftw/activity/browser/templates/activity_raw.pt:4
 msgid "more_link_label"
