Fix fetching within tabbedview tabs.
Change rendered fetch URL

Change the rendered fetch URL to no longer be generated from the
request but to be built from the view name under which the activity view
is rendered.
This is done in order to make sure that we have the actually used
activity view which should allow public access to /fetch in order to
update with AJAX.

Make /fetch and /raw traversable and public callable

The "fetch" and "raw" methods of any activity view should be public
callable in order to update views with AJAX.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 2.0.1 (unreleased)
 ------------------
 
+- Fix fetching within tabbedview tabs.
+  [jone]
+
 - Add an Activity Portlet
   [elioschmutz]
 
