Fix bug with collective.geo when indexing objects too early.
The problem is that collective.geo may fire a IObjectGeoreferencedEvent
while creating the object, before the object is added to its parent.

Since the IObjectGeoreferencedEvent is also an IObjectModifiedEvent, we
are trying to add an activity record but fail because the acquisition is
missing.

The fix is to ignore all objects which have no acquisition.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,8 @@ Changelog
 2.0.1 (unreleased)
 ------------------
 
+- Fix bug with collective.geo when indexing objects too early. [jone]
+
 - Fix a bug which occurred when moving objects from and to the Plone Site.
   [mbaechtold]
 
