--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,7 @@ Changelog
 2.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Optimize performance of date index by storing timestamps. [jone]
 
 
 2.1.0 (2016-03-21)
