Hide "More" button when there are no more events.
The more button es hidden when it would not result in more activities.
This is done by marking each activity while performing the batching.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,8 @@ Changelog
 2.2.1 (unreleased)
 ------------------
 
+- Hide "More" button when there are no more events. [jone]
+
 - Hide "More" button when there are no events. [jone]
 
 
