--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,7 @@ Changelog
 2.2.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Store activites for added / removed p.a.discussion comments. [jone]
 
 
 2.2.2 (2016-11-15)
