--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,7 @@ Changelog
 2.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Ignore events of objects without UIDs to avoid errors. [raphael-s]
 
 
 2.3.1 (2017-06-19)
