--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,7 @@ Changelog
 2.4.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Upgrade to ftw.theming (also fixes missing css on plone 5) [Nachtalb]
 
 
 2.4.0 (2019-10-29)
