--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,7 @@ Changelog
 2.5.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Show plone toolbar in activity view [Nachtalb]
 
 
 2.5.1 (2019-12-14)
